<resources>
    <string name="app_name">Grammarway</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="grammarway_1">Grammarway 1</string>
    <string name="grammarway_2">Grammarway 2</string>
    <string name="grammarway_3">Grammarway 3</string>
    <string name="grammarway_4">Grammarway 4</string>
    <string name="themes">Themes</string>
    <string name="revision">Revision</string>
    <string name="irregular_verbs_and_dictionaries">Irregular verbs and Dictionaries</string>
    <string name="answers">Answers</string>
    <string name="irregular_verbs">Irregular verbs</string>
    <string name="irregular_verbs_and_appendices">Irregular verbs and appendices</string>
    <string name="key_to_exercises">Key to exercises</string>
    <string name="tests">Tests</string>
    <string name="test_answers">Test Answers</string>
    <string name="progress_tests">Progress tests</string>
</resources>