<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grammarway3_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnThemes3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/themes"

            />

        <Button
            android:id="@+id/btnRevision3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/revision"/>

        <Button
            android:id="@+id/btnVerbs3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/irregular_verbs_and_appendices"/>

        <Button
            android:id="@+id/btnKeyToExercises3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"

            android:text="@string/key_to_exercises"
            />

        <Button
            android:id="@+id/btnTests3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/tests"
            />

        <Button
            android:id="@+id/btnTestAnswers3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="@string/test_answers"
            />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>