<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grammarway4_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnThemes4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/themes"
            />

        <Button
            android:id="@+id/btnRevision4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/revision"/>

        <Button
            android:id="@+id/btnVerbs4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/irregular_verbs_and_appendices"/>

        <Button
            android:id="@+id/btnKeyToAnswers4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"

            android:text="@string/key_to_exercises"
            />

        <Button
            android:id="@+id/btnProgressTest4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/progress_tests"
            />

        <Button
            android:id="@+id/btnWordList"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="Word list"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>